--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,10 +6,16 @@
     android:layout_height="match_parent"
     android:weightSum="1">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.58"
+        app:srcCompat="@mipmap/ic_launcher_round" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_weight="0.55"
+        android:layout_height="34dp"
         android:orientation="horizontal">
     </LinearLayout>
 
@@ -61,8 +67,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_weight="0.20"
+        android:layout_height="45dp"
         android:orientation="horizontal">
     </LinearLayout>
 
