--- a/app/src/main/res/layout/activity_usermain.xml
+++ b/app/src/main/res/layout/activity_usermain.xml
@@ -14,7 +14,18 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
+
+
+
     </FrameLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:fabSize="mini"
+        app:srcCompat="@drawable/testlogin" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
