--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -25,7 +25,8 @@
         android:id="@+id/register_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/register_password_hint" />
+        android:hint="@string/register_password_hint"
+        android:inputType="textPassword"/>
 
     <Button
         android:id="@+id/button_submit"
