--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="190dp"
-        app:srcCompat="@drawable/login"
+        app:srcCompat="@drawable/login1"
         android:layout_weight="0.57" />
 
     <LinearLayout
