--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,56 +20,64 @@
     </LinearLayout>
 
     <LinearLayout
+        android:orientation="vertical"
+        android:layout_height="200dp"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal">
+        android:weightSum="1">
+
+        <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="60dp"
+             android:orientation="horizontal">
+              <TextView
+                  android:layout_width="90dp"
+                  android:layout_height="wrap_content"
+                  android:layout_gravity="center_vertical"
+                  android:text="@string/username"
+                  android:textColor="@color/colorPrimary"
+                  android:textSize="18sp" />
+
+             <EditText
+                 android:id="@+id/username"
+                 android:layout_width="292dp"
+                 android:layout_height="wrap_content"
+                 android:layout_gravity="center_vertical"
+                 android:hint="@string/username_hint"
+                 android:textColor="@color/colorPrimaryDark" />
+         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:orientation="horizontal">
 
 
-        <TextView
-            android:layout_width="90dp"
+            <TextView
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="@string/password"
+                android:textColor="@color/colorPrimary"
+                android:textSize="18sp" />
+
+            <EditText
+                android:id="@+id/userpassword"
+                android:layout_width="292dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:hint="@string/password_hint"
+                android:textColor="@color/colorPrimaryDark" />
+        </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/login_progress"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="371dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="@string/username"
-            android:textColor="@color/colorPrimary"
-            android:textSize="18sp" />
+            android:visibility="gone" />
 
-        <EditText
-            android:id="@+id/username"
-            android:layout_width="292dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:hint="@string/username_hint"
-            android:textColor="@color/colorPrimaryDark" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal">
-
-
-        <TextView
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="@string/password"
-            android:textColor="@color/colorPrimary"
-            android:textSize="18sp" />
-
-        <EditText
-            android:id="@+id/userpassword"
-            android:layout_width="292dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:hint="@string/password_hint"
-            android:textColor="@color/colorPrimaryDark" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:orientation="horizontal">
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -78,7 +86,7 @@
         android:weightSum="1">
 
         <ImageButton
-            android:id="@+id/Login"
+            android:id="@+id/login"
             android:layout_width="80dp"
             android:layout_height="match_parent"
             app:srcCompat="@drawable/testlogin" />
