--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,8 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/login3" />
+        android:background="@drawable/login3"
+        />
 
     <!-- 开始你的表演！ -->
     <ImageView
@@ -161,7 +162,7 @@
             android:layout_marginBottom="8dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="8dp"
-            app:layout_constraintVertical_bias="0.71"
+            app:layout_constraintVertical_bias="0.716"
             android:background="@android:color/transparent"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp" />
