--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,21 +64,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="register"
-            android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="653dp"
-            app:layout_constraintHorizontal_bias="0.74"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="700dp"
-            app:layout_constraintVertical_bias="0.16000003" />
+            app:layout_constraintVertical_bias="0.234"
+            app:layout_constraintHorizontal_bias="0.828" />
 
         <Button
             android:id="@+id/forgetPassword"
             android:layout_width="85dp"
-            android:layout_height="18dp"
+            android:layout_height="48dp"
             android:background="@android:color/transparent"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -89,7 +87,9 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="8dp"
             app:layout_constraintHorizontal_bias="0.798"
-            app:layout_constraintVertical_bias="0.608" />
+            app:layout_constraintVertical_bias="0.608"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
 
         <CheckBox
             android:id="@+id/remainLogin"
@@ -152,7 +152,7 @@
         <Button
             android:id="@+id/login"
             android:layout_width="298dp"
-            android:layout_height="46dp"
+            android:layout_height="48dp"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
