--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,21 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@drawable/splash"
     tools:context="com.liyuaninc.liyuan.SplashActivity.Splash">
-
-    <LinearLayout
-        android:layout_width="585dp"
-        android:layout_height="873dp"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="4dp">
-
-        <VideoView
-            android:id="@+id/splashview"
-            android:layout_width="413dp"
-            android:layout_height="634dp"
-            tools:layout_editor_absoluteX="-9dp"
-            tools:layout_editor_absoluteY="-10dp" />
-    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
