--- a/app/src/main/res/layout/frament_8.xml
+++ b/app/src/main/res/layout/frament_8.xml
@@ -1,7 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/bg_fragment_8">
+    android:background="@color/common_google_signin_btn_text_dark_default">
 
+
+    <TextView
+        android:id="@+id/startlock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="62dp"
+        android:text="启动锁屏"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <Switch
+        android:id="@+id/lockon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="61dp"
+        android:layout_alignTop="@+id/startlock"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
