--- a/app/src/main/res/layout/frament_7.xml
+++ b/app/src/main/res/layout/frament_7.xml
@@ -1,7 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/bg_fragment_7">
+    android:background="@mipmap/bg_fragment_4">
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="80sp"
+        android:layout_height="60sp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        app:srcCompat="@drawable/opmode" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="2000sp"
+        android:layout_height="60sp"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/imageView3"
+        android:text="进入手动辅助"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/opmodehelp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@android:color/transparent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
