--- a/app/src/main/res/layout-land/activity_opmodehelp.xml
+++ b/app/src/main/res/layout-land/activity_opmodehelp.xml
@@ -12,8 +12,8 @@
         android:id="@+id/X"
         android:layout_width="60sp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="119dp"
-        android:layout_marginTop="147dp"
+        android:layout_marginEnd="85dp"
+        android:layout_marginTop="92dp"
         android:background="@android:color/transparent"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true" />
@@ -22,17 +22,16 @@
         android:id="@+id/Y"
         android:layout_width="60sp"
         android:layout_height="50sp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="31dp"
         android:background="@android:color/transparent"
-        android:layout_marginEnd="6dp"
-        android:layout_below="@+id/X"
-        android:layout_toStartOf="@+id/X" />
+        android:layout_marginEnd="49dp"
+        android:layout_alignTop="@+id/X"
+        android:layout_alignEnd="@+id/X" />
 
     <Button
         android:id="@+id/A"
         android:layout_width="60sp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="9dp"
         android:background="@android:color/transparent"
         android:layout_below="@+id/Y"
         android:layout_alignStart="@+id/X" />
@@ -42,42 +41,42 @@
         android:layout_width="50sp"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
-        android:layout_alignBaseline="@+id/Y"
-        android:layout_alignBottom="@+id/Y"
         android:layout_toEndOf="@+id/A"
-        android:layout_marginStart="7dp" />
+        android:layout_alignTop="@+id/Y" />
 
     <Button
         android:id="@+id/up"
         android:layout_width="50sp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="133dp"
         android:background="@android:color/transparent"
-        android:layout_above="@+id/B"
-        android:layout_alignParentStart="true" />
+        android:layout_marginBottom="17dp"
+        android:layout_above="@+id/down"
+        android:layout_alignStart="@+id/left"
+        android:layout_marginStart="39dp" />
 
     <Button
         android:id="@+id/left"
         android:layout_width="50sp"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
+        android:layout_marginStart="49dp"
         android:layout_alignBottom="@+id/Y"
-        android:layout_toStartOf="@+id/right" />
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/down"
         android:layout_width="50sp"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
-        android:layout_alignTop="@+id/Y"
-        android:layout_toEndOf="@+id/up" />
+        android:layout_centerVertical="true"
+        android:layout_toStartOf="@+id/right" />
 
     <Button
         android:id="@+id/right"
         android:layout_width="50sp"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
-        android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/up" />
+        android:layout_alignTop="@+id/Y"
+        android:layout_toEndOf="@+id/up" />
 
 </RelativeLayout>
