--- a/app/src/main/res/layout/activity_opmodehelp.xml
+++ b/app/src/main/res/layout/activity_opmodehelp.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,29 +13,33 @@
         android:layout_width="60sp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="119dp"
-        android:layout_marginTop="147dp"
         android:background="@android:color/transparent"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        tools:layout_editor_absoluteY="213dp"
+        tools:layout_editor_absoluteX="372dp" />
 
     <Button
         android:id="@+id/Y"
         android:layout_width="60sp"
         android:layout_height="50sp"
-        android:layout_marginTop="10dp"
         android:background="@android:color/transparent"
         android:layout_marginEnd="6dp"
         android:layout_below="@+id/X"
-        android:layout_toStartOf="@+id/X" />
+        android:layout_toStartOf="@+id/X"
+        tools:layout_editor_absoluteY="163dp"
+        tools:layout_editor_absoluteX="420dp" />
 
     <Button
         android:id="@+id/A"
         android:layout_width="60sp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="9dp"
-        android:background="@android:color/transparent"
         android:layout_below="@+id/Y"
-        android:layout_alignStart="@+id/X" />
+        android:layout_toEndOf="@+id/Y"
+        android:background="@android:color/transparent"
+        android:text="a"
+        tools:layout_editor_absoluteX="372dp"
+        tools:layout_editor_absoluteY="115dp" />
 
     <Button
         android:id="@+id/B"
@@ -45,7 +49,9 @@
         android:layout_alignBaseline="@+id/Y"
         android:layout_alignBottom="@+id/Y"
         android:layout_toEndOf="@+id/A"
-        android:layout_marginStart="7dp" />
+        android:layout_marginStart="7dp"
+        tools:layout_editor_absoluteY="165dp"
+        tools:layout_editor_absoluteX="331dp" />
 
     <Button
         android:id="@+id/up"
@@ -54,7 +60,9 @@
         android:layout_marginStart="133dp"
         android:background="@android:color/transparent"
         android:layout_above="@+id/B"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        tools:layout_editor_absoluteY="115dp"
+        tools:layout_editor_absoluteX="74dp" />
 
     <Button
         android:id="@+id/left"
@@ -62,7 +70,9 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:layout_alignBottom="@+id/Y"
-        android:layout_toStartOf="@+id/right" />
+        android:layout_toStartOf="@+id/right"
+        tools:layout_editor_absoluteY="165dp"
+        tools:layout_editor_absoluteX="31dp" />
 
     <Button
         android:id="@+id/down"
@@ -70,7 +80,9 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:layout_alignTop="@+id/Y"
-        android:layout_toEndOf="@+id/up" />
+        android:layout_toEndOf="@+id/up"
+        tools:layout_editor_absoluteY="213dp"
+        tools:layout_editor_absoluteX="74dp" />
 
     <Button
         android:id="@+id/right"
@@ -78,6 +90,8 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/up" />
+        android:layout_alignStart="@+id/up"
+        tools:layout_editor_absoluteY="165dp"
+        tools:layout_editor_absoluteX="110dp" />
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
