--- a/app/src/main/res/layout/activity_opmodehelp.xml
+++ b/app/src/main/res/layout/activity_opmodehelp.xml
@@ -10,88 +10,140 @@
 
     <Button
         android:id="@+id/X"
-        android:layout_width="60sp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="119dp"
-        android:background="@android:color/transparent"
-        android:layout_alignParentTop="true"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_alignParentEnd="true"
-        tools:layout_editor_absoluteY="213dp"
-        tools:layout_editor_absoluteX="372dp" />
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="51dp"
+        android:layout_marginTop="39dp"
+        android:background="@android:color/transparent"
+        android:text="x"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="@+id/B"
+        app:layout_constraintRight_toRightOf="@+id/Y"
+        app:layout_constraintTop_toBottomOf="@+id/A"
+        app:layout_constraintVertical_bias="0.007" />
 
     <Button
         android:id="@+id/Y"
-        android:layout_width="60sp"
-        android:layout_height="50sp"
-        android:background="@android:color/transparent"
-        android:layout_marginEnd="6dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_below="@+id/X"
         android:layout_toStartOf="@+id/X"
-        tools:layout_editor_absoluteY="163dp"
-        tools:layout_editor_absoluteX="420dp" />
+        android:background="@android:color/transparent"
+        android:layout_marginRight="26dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="173dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.969"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/A"
-        android:layout_width="60sp"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_below="@+id/Y"
         android:layout_toEndOf="@+id/Y"
         android:background="@android:color/transparent"
         android:text="a"
-        tools:layout_editor_absoluteX="372dp"
-        tools:layout_editor_absoluteY="115dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="82dp"
+        android:layout_marginRight="51dp"
+        app:layout_constraintRight_toRightOf="@+id/Y"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/B"
+        app:layout_constraintHorizontal_bias="1.0" />
 
     <Button
         android:id="@+id/B"
-        android:layout_width="50sp"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
+        android:layout_width="49dp"
+        android:layout_height="47dp"
         android:layout_alignBaseline="@+id/Y"
         android:layout_alignBottom="@+id/Y"
         android:layout_toEndOf="@+id/A"
-        android:layout_marginStart="7dp"
-        tools:layout_editor_absoluteY="165dp"
-        tools:layout_editor_absoluteX="331dp" />
+        android:background="@android:color/transparent"
+        app:layout_constraintRight_toLeftOf="@+id/Y"
+        android:layout_marginRight="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="166dp" />
 
     <Button
         android:id="@+id/up"
-        android:layout_width="50sp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="133dp"
-        android:background="@android:color/transparent"
+        android:layout_width="43dp"
+        android:layout_height="44dp"
         android:layout_above="@+id/B"
         android:layout_alignParentStart="true"
-        tools:layout_editor_absoluteY="115dp"
-        tools:layout_editor_absoluteX="74dp" />
+        android:background="@android:color/transparent"
+        android:layout_marginRight="29dp"
+        app:layout_constraintRight_toRightOf="@+id/right"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/left"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="78dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/left"
-        android:layout_width="50sp"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
+        android:layout_width="48dp"
+        android:layout_height="32dp"
         android:layout_alignBottom="@+id/Y"
         android:layout_toStartOf="@+id/right"
-        tools:layout_editor_absoluteY="165dp"
-        tools:layout_editor_absoluteX="31dp" />
+        android:background="@android:color/transparent"
+        app:layout_constraintRight_toLeftOf="@+id/B"
+        android:layout_marginRight="294dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="122dp"
+        app:layout_constraintBottom_toBottomOf="@+id/down"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="1.0" />
 
     <Button
         android:id="@+id/down"
-        android:layout_width="50sp"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
+        android:layout_width="46dp"
+        android:layout_height="37dp"
         android:layout_alignTop="@+id/Y"
         android:layout_toEndOf="@+id/up"
-        tools:layout_editor_absoluteY="213dp"
-        tools:layout_editor_absoluteX="74dp" />
+        android:background="@android:color/transparent"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/up"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginLeft="64dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/X"
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="0.099" />
 
     <Button
         android:id="@+id/right"
-        android:layout_width="50sp"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:layout_centerVertical="true"
+        android:layout_width="40dp"
+        android:layout_height="30dp"
         android:layout_alignStart="@+id/up"
-        tools:layout_editor_absoluteY="165dp"
-        tools:layout_editor_absoluteX="110dp" />
+        android:layout_centerVertical="true"
+        android:background="@android:color/transparent"
+        app:layout_constraintRight_toLeftOf="@+id/B"
+        android:layout_marginRight="229dp"
+        app:layout_constraintLeft_toRightOf="@+id/left"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.894"
+        app:layout_constraintTop_toTopOf="@+id/A"
+        android:layout_marginTop="40dp"
+        app:layout_constraintBottom_toBottomOf="@+id/X"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
