--- a/app/src/main/res/layout/activity_opmodehelp.xml
+++ b/app/src/main/res/layout/activity_opmodehelp.xml
@@ -146,4 +146,20 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintVertical_bias="0.0" />
 
+    <Button
+        android:id="@+id/view"
+        android:layout_width="51dp"
+        android:layout_height="46dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="3dp"
+        android:text="C"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.014" />
+
 </android.support.constraint.ConstraintLayout>
